--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 # Set compiler explicitly (optional)
 set(CMAKE_C_COMPILER gcc)
+set(CMAKE_BUILD_TYPE Debug)
 
 # Recursively include all directories under /header
 file(GLOB_RECURSE HEADER_DIRS RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/header/*.h)
@@ -23,7 +24,8 @@ find_package(OpenMP REQUIRED)
 # Gather all source files
 file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.c)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -Werror -O3 -pg -fopenmp") 
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic -Werror -fopenmp") 
 
 add_executable(Rasterizer ${SOURCES})
 
